
IF(OSG_VERBOSE_SCAN)
    MESSAGE( STATUS "Looking at : ${CMAKE_CURRENT_SOURCE_DIR}")
ENDIF(OSG_VERBOSE_SCAN)

IF(${PROJECT_NAME} STREQUAL "OSGSystem")

    ADD_SUBDIRECTORY(WS)
    ADD_SUBDIRECTORY(Squish)
    PROCESS_DIR()

ELSEIF(${PROJECT_NAME} STREQUAL "OSGImageFileIO")

    ADD_SUBDIRECTORY(FileIO)

ENDIF()
