
IF(OSG_VERBOSE_SCAN)
    MESSAGE( STATUS "Looking at : ${CMAKE_CURRENT_SOURCE_DIR}")
ENDIF(OSG_VERBOSE_SCAN)

IF(${PROJECT_NAME} STREQUAL "OSGSystem")

    ADD_SUBDIRECTORY(Groups)
    ADD_SUBDIRECTORY(Drawables)

ELSEIF(${PROJECT_NAME} STREQUAL "OSGGroup")

    ADD_SUBDIRECTORY(Groups)

ELSEIF(${PROJECT_NAME} STREQUAL "OSGDrawable")

    ADD_SUBDIRECTORY(Drawables)

ELSEIF(${PROJECT_NAME} STREQUAL "OSGEffectGroups")

    ADD_SUBDIRECTORY(Groups)

ENDIF()

